--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: true
-          tags: xgiovanni/bits-backend:${{ github.sha }},xgiovanni/bits-frontend:latest
+          tags: xgiovanni/bits-frontend:${{ github.sha }},xgiovanni/bits-frontend:latest
       - name: Configurar credenciales de AWS
         uses: aws-actions/configure-aws-credentials@v1
         with:
